helloworld-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-db-service
  labels:
    app: helloworld-db
spec:
  ports:
  - name: dbport
    port: 3000
  selector:
    app: helloworld-db
